Parser with optional() and zeroOrMore()